Bug 467562.  Fix race between the timeout on our DNS thread waits and signals to those threads that could cause DNS requests to go AWOL every so often.  r+sr=bzbarsky